internal/shader/testdata/bad/bad_array_of_arrays.go
package main

var ArrayOfArrays [10][10]int
